--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-modern-drawer": "^1.2.2",
-    "react-router-dom": "^6.21.1",
+    "react-router-dom": "^6.23.1",
+    "react-scroll": "^1.9.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
+    "@types/react-scroll": "^1.8.10",
     "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
